# bachelor

./: .gitignore  .gitmodules  Doxyfile  aufgabenstellung.tex  bachelor.tex  bedienungsanleitungs.tex  capture  doku.tex  eid.tex  fault_injector.json  fault_injector.sh  fi_tests.sh  glossary.tex  grundlagen.tex  implementierung.tex  konzept.tex  lit.bib  notizen-erster-tag.txt  notizen.txt  physics.json  pre-commit.sh  precommit.sh  run-tests.sh  sections.tex  todo.txt  voter_to_world.proto
code/: CMakeLists.txt  ft_proto.x  interface.h  interface.x  interface_clnt.c  interface_xdr.c  msgpack.c  rpc.txt
code/controller/: CMakeLists.txt  main.cpp  main.cxx  structs.h
code/libalgo/: CMakeLists.txt  algo.cxx  algo.h
code/libecc/: CMakeLists.txt  _ecc.h  berlekamp.c  ecc.h  example.c  rs.c
code/libficfg/: CMakeLists.txt  ficfg.cxx  ficfg.h
code/libnetwork/: CMakeLists.txt  network.cxx  network.h
code/librpc/: CMakeLists.txt  rpc.c  rpc.h
code/libworld/: CMakeLists.txt  world.c  world.h
code/server/: Makefile  interface_server  interface_server.c  interface_svc.c
code/servercsharp/: MoveRequest.cs  Object.cs  ObjectType.cs  WorldStatus.cs  interface.cs  interfaceClient.cs  interfaceServerStub.cs
code/simulation/: CMakeLists.txt  main.c  main.cxx  robot.cxx  robot.h  test_robot.cxx  test_world.cxx  world.cxx  world.h
code/test_programms/: CMakeLists.txt  fi_test.cxx  fuel_test.cxx  impuls.cxx  move2fuel.cxx  movement.cxx
code/test_programms/network/: CMakeLists.txt  bch4836.c  example.c  full.cxx  liquid.c  main.c  rs.c  viterbi.cpp
code/test_programms/network/fecmagic/tests/: decoder
code/test_programms/network/rscode-1.3/: CMakeLists.txt  example.c
code/tests/: CMakeLists.txt
code/tests/algo/: CMakeLists.txt  test_algo.cxx  test_vector.cxx
code/tests/ecc/: CMakeLists.txt  test_ecc.cxx
code/tests/ficfg/: CMakeLists.txt  test_ficfg.cxx
code/tests/network/: CMakeLists.txt  test_network.cxx
code/tests/rpc/: CMakeLists.txt  test_rpc.cxx
code/tests/simulation/: CMakeLists.txt  test_robot.cxx  test_world.cxx
code/voter/: CMakeLists.txt  Makefile  interface_client  interface_client.c  interface_clnt.c  libworld.c  main.c  main.cxx  rpc-example.c  rpc.c  rpc.h  voter.h  world.h
images/: FM Controller.odg  FM Roboter Bewegt sich falsch.odg  FM Roboter.odg  Netzwerk.odg  voter.txt
test_results/: fi-0-0.csv  fi-0-1.csv  fi-0-2.csv  fi-0-3.csv  fi-0-4.csv  fi-10-0.csv  fi-10-1.csv  fi-10-2.csv  fi-10-3.csv  fi-10-4.csv  fi-20-0.csv  fi-20-1.csv  fi-20-2.csv  fi-20-3.csv  fi-20-4.csv  fi-30-0.csv  fi-30-2-fake.csv  fi-30-2.csv  fi-30-3.csv  fi-30-4.csv  fi-40-1.csv  fi-40-2-fake.csv  fi-40-2.csv  fi-40-3.csv  fi-40-4.csv  fi_0_0.csv  fi_0_1.csv  fi_0_2.csv  fi_0_3.csv  fi_10_0.csv  fi_10_1.csv  fi_10_2.csv  fi_10_3.csv  fi_20_0.csv  fi_20_1.csv  fi_20_2.csv  fi_20_3.csv  fi_30_0.csv  fi_30_1.csv  fi_30_2.csv  (+28 more)
texbuild/: Makefile
